WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279982
Regression(
283825@main
) Several WKUserContentController API tests are failing
https://bugs.webkit.org/show_bug.cgi?id=279982
Summary
Regression(283825@main) Several WKUserContentController API tests are failing
Chris Dumez
Reported
2024-09-19 08:10:30 PDT
Several WKUserContentController API tests are failing since
283825@main
: TestWebKitAPI.WKUserContentController.AddUserStyleSheetBeforeCreatingView TestWebKitAPI.WKUserContentController.UserStyleSheetAffectingAllFrames TestWebKitAPI.WKUserContentController.UserStyleSheetAffectingOnlyMainFrame TestWebKitAPI.WKUserContentController.UserStyleSheetRemoveAll TestWebKitAPI.WKUserContentController.UserStyleSheetSpecificityLevelAuthor TestWebKitAPI.WKWebExtensionAPIScripting.RemoveAllUserStyleSheetsDoesNotRemoveWebExtensionStyleSheets TestWebKitAPI.WebKit2UserContentTest.AddUserStyleSheetAfterCreatingView TestWebKitAPI.WebKit2UserContentTest.AddUserStyleSheetBeforeCreatingView
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-09-19 08:12:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33904
EWS
Comment 2
2024-09-19 08:22:15 PDT
Committed
283918@main
(4cfa88ce2506): <
https://commits.webkit.org/283918@main
> Reviewed commits have been landed. Closing PR #33904 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-19 08:23:16 PDT
<
rdar://problem/136294917
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug