Regression(283825@main) Several WKUserContentController API tests are failing https://bugs.webkit.org/show_bug.cgi?id=279982

Reviewed by Ryosuke Niwa and Per Arne Vollan.

We started calling elementsOfType<>() on the wrong data members after switching
to protectedFoo() functions.

* Source/WebKit/UIProcess/UserContent/WebUserContentControllerProxy.cpp:
(WebKit::WebUserContentControllerProxy::removeAllUserStyleSheets):

Canonical link: https://commits.webkit.org/283918@main